# BEM-Method---Scientific-Programming-for-Wind-Energy

./: .gitignore  COLLABORATION.md  README.md  pyproject.toml
examples/: main.py
src/piwe_bem_mouxtin_ae/: airfoil_tools.py  bem_solver.py  data_loader.py  performance_curves.py  plots.py  turbine_classes.py
tests/: test_bem.py
